--- a/Tugas_2.html
+++ b/Tugas_2.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Le Tùsa</title>
-	<link rel="icon" href="/tugas/images/letusalogo.png" type="png">
+	<link rel="icon" href="/Tugas_PengWeb2/letusalogo.png" type="png">
 </head>
 <style>
     body {
-    	background-image: url("/tugas/images/background.jpg");
+    	background-image: url("/Tugas_PengWeb2/background.jpg");
         background-size: cover;
         background-position: center;
         height: 100px;
@@ -41,7 +41,7 @@
 <!--Unduh video konten dari Instagram @letusasignature-->
 <div class="video-container">
 	<video width="400" height="600" autoplay muted>
-		<source src="/tugas/images/letusavideo1.mp4" type="video/mp4">
+		<source src="/Tugas_PengWeb2s/letusavideo1.mp4" type="video/mp4">
         </video>
     </div>
 
@@ -149,10 +149,10 @@
 </p>
 
 <h2 style="margin-left: 20px;">Our Available Rooms</h2>
-<img src="/tugas/images/infrontof.jpg" style="margin-left: 20px" width="300px" height="300px" alt="In Front of Bar";>
-<img src="/tugas/images/corner.jpg" width="300px" height="300px" alt="Sharing Table" ;>
-<img src="/tugas/images/inside.jpg" width="300px" height="300px" alt="Inside Room" ;>
-<img src="/tugas/images/smokingarea.jpg" width="300px" height="300px" alt="Smoking Room" ;>
+<img src="/Tugas_PengWeb2/infrontof.jpg" style="margin-left: 20px" width="300px" height="300px" alt="In Front of Bar";>
+<img src="/Tugas_PengWeb2/corner.jpg" width="300px" height="300px" alt="Sharing Table" ;>
+<img src="/Tugas_PengWeb2/inside.jpg" width="300px" height="300px" alt="Inside Room" ;>
+<img src="/Tugas_PengWeb2/smokingarea.jpg" width="300px" height="300px" alt="Smoking Room" ;>
 
 <h2 style="margin-left: 20px">Reserve Your Place</h2>
 <p style="margin-left: 20px; margin-right: 20px;">Le Tùsa is where you can find your peace, cozy place to hangout, stable internet for WFC or meeting with your partner and spend your time with your beloved one.<br>You can reserve the place you want to relax by fill the blank below.</p>
